# rag-recommander-evenements-culturels

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Chat.py  Dockerfile  FeedbackViewer.py  Makefile  README.md  docker-compose.yml  evaluate_rag.py  indexer.py  main.py  pyproject.toml  requirements.txt  reset.py
.github/workflows/: evaluate_rag.yml  tests.yml
api/: main.py
app/: Chat.py  FeedbackViewer.py
core/: config.py  container.py  load_data.py  prompts.py  query_classifier.py  query_utils.py  rag_pipeline.py  vector_store.py
data/: eval_dataset.json  eval_events.json
db/: database.py
evaluation/: evaluate_rag.py  test_generator.py  testset_generator.py
scripts/: indexer.py  reset.py
tests/: test_api.py
utils/: config.py  container.py  database.py  load_data.py  prompts.py  query_classifier.py  query_utils.py  rag_pipeline.py  vector_store.py
vector_db_eval/: document_chunks.pkl  faiss_index.idx  index.faiss  index.pkl  index_metadata.json
