[project]
name = "rag-recommander-evenements-culturels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "faiss-cpu>=1.13.2",
    "jq>=1.11.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "mistralai>=2.4.2",
    "streamlit>=1.56.0",
    "streamlit-feedback>=0.1.4",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
