[project]
name = "rag-recommander-evenements-culturels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.110.0",
    "jq>=1.11.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "mistralai>=2.4.2",
    "streamlit>=1.56.0",
    "streamlit-feedback>=0.1.4",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
hf = ["sentence-transformers>=2.0.0"]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "ipykernel>=7.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
